tests/machine/x/cpp/cross_join.error
line 40: ../../../tests/machine/x/cpp/cross_join.cpp:40:48: error: no matching function for call to ‘declval<__struct2{100, 1, 250}>()’
   40 |   decltype(std::declval<__struct2{100, 1, 250}>().id) orderId;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
In file included from /usr/include/c++/13/bits/stl_pair.h:60,
                 from /usr/include/c++/13/bits/stl_algobase.h:64,
                 from /usr/include/c++/13/algorithm:60,
                 from ../../../tests/machine/x/cpp/cross_join.cpp:1:
/usr/include/c++/13/type_traits:2386:10: note: candidate: ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
 2386 |     auto declval() noexcept -> decltype(__declval<_Tp>(0))
      |          ^~~~~~~
/usr/include/c++/13/type_traits:2386:10: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/cross_join.cpp:40:48: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
   40 |   decltype(std::declval<__struct2{100, 1, 250}>().id) orderId;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
../../../tests/machine/x/cpp/cross_join.cpp:40:48: note:   expected a type, got ‘__struct2{100, 1, 250}’
../../../tests/machine/x/cpp/cross_join.cpp:40:48: error: no matching function for call to ‘declval<__struct2{100, 1, 250}>()’
/usr/include/c++/13/type_traits:2386:10: note: candidate: ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
 2386 |     auto declval() noexcept -> decltype(__declval<_Tp>(0))
      |          ^~~~~~~
/usr/include/c++/13/type_traits:2386:10: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/cross_join.cpp:40:48: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
   40 |   decltype(std::declval<__struct2{100, 1, 250}>().id) orderId;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
../../../tests/machine/x/cpp/cross_join.cpp:40:48: note:   expected a type, got ‘__struct2{100, 1, 250}’
../../../tests/machine/x/cpp/cross_join.cpp:41:48: error: no matching function for call to ‘declval<__struct2{100, 1, 250}>()’
   41 |   decltype(std::declval<__struct2{100, 1, 250}>().customerId) orderCustomerId;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/usr/include/c++/13/type_traits:2386:10: note: candidate: ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
 2386 |     auto declval() noexcept -> decltype(__declval<_Tp>(0))
      |          ^~~~~~~
/usr/include/c++/13/type_traits:2386:10: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/cross_join.cpp:41:48: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
   41 |   decltype(std::declval<__struct2{100, 1, 250}>().customerId) orderCustomerId;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
../../../tests/machine/x/cpp/cross_join.cpp:41:48: note:   expected a type, got ‘__struct2{100, 1, 250}’
../../../tests/machine/x/cpp/cross_join.cpp:41:48: error: no matching function for call to ‘declval<__struct2{100, 1, 250}>()’
/usr/include/c++/13/type_traits:2386:10: note: candidate: ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
 2386 |     auto declval() noexcept -> decltype(__declval<_Tp>(0))
      |          ^~~~~~~
/usr/include/c++/13/type_traits:2386:10: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/cross_join.cpp:41:48: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
   41 |   decltype(std::declval<__struct2{100, 1, 250}>().customerId) orderCustomerId;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
../../../tests/machine/x/cpp/cross_join.cpp:41:48: note:   expected a type, got ‘__struct2{100, 1, 250}’
../../../tests/machine/x/cpp/cross_join.cpp:43:48: error: no matching function for call to ‘declval<__struct2{100, 1, 250}>()’
   43 |   decltype(std::declval<__struct2{100, 1, 250}>().total) orderTotal;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/usr/include/c++/13/type_traits:2386:10: note: candidate: ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
 2386 |     auto declval() noexcept -> decltype(__declval<_Tp>(0))
      |          ^~~~~~~
/usr/include/c++/13/type_traits:2386:10: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/cross_join.cpp:43:48: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
   43 |   decltype(std::declval<__struct2{100, 1, 250}>().total) orderTotal;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
../../../tests/machine/x/cpp/cross_join.cpp:43:48: note:   expected a type, got ‘__struct2{100, 1, 250}’
../../../tests/machine/x/cpp/cross_join.cpp:43:48: error: no matching function for call to ‘declval<__struct2{100, 1, 250}>()’
/usr/include/c++/13/type_traits:2386:10: note: candidate: ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
 2386 |     auto declval() noexcept -> decltype(__declval<_Tp>(0))
      |          ^~~~~~~
/usr/include/c++/13/type_traits:2386:10: note:   template argument deduction/substitution failed:
../../../tests/machine/x/cpp/cross_join.cpp:43:48: error: type/value mismatch at argument 1 in template parameter list for ‘template<class _Tp> decltype (__declval<_Tp>(0)) std::declval()’
   43 |   decltype(std::declval<__struct2{100, 1, 250}>().total) orderTotal;
      |            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
../../../tests/machine/x/cpp/cross_join.cpp:43:48: note:   expected a type, got ‘__struct2{100, 1, 250}’

 39 | struct __struct3 {
 40 |   decltype(std::declval<__struct2{100, 1, 250}>().id) orderId;
 41 |   decltype(std::declval<__struct2{100, 1, 250}>().customerId) orderCustomerId;
